--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css" href="index.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     </head>
     <body>
-        
+        <div id="landing">
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <div class="cenTex">
+
+        </div>
+        <div id="languages">
+
+        </div>
+        <div id="projects">
+
+        </div>
     </body>
 </html>
