added list styling

--- a/index.html
+++ b/index.html
@@ -6,21 +6,43 @@
     </head>
     <body>
         <div id="landing">
-            <div>
-
+            <h2>Hello, I'm</h2>
+            <div id="wrapper">
+                <div class="centex">
+                    <h1>Terrence Amponsah</h1>
+                    <h3>I'm a Computer Science student at the University of Toronto!</h3>
+                    <!-- Fonts to be arranged later.-->
+                    <a href="#"><i class="fas fa-arrow-down"></i></a>
+                </div>
             </div>
-            <div>
-
-            </div>
-        </div>
-        <div class="cenTex">
-
         </div>
         <div id="languages">
-
+            <h2>Skills</h2>
+            <ul>
+                <li>Python</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Django</li>
+                <a href="#"><i class="fas fa-arrow-down"></i></a>
+            </ul>
         </div>
         <div id="projects">
-
+            <h2>Portfolio</h2>
+            <ul>
+                <li><a href="http://www.rootsyard.org/">Rootsyard Lodge Website<b class="twinge">HTML, CSS, Javascript</b></a></li>
+                <!-- TODO Add rules about fadein animation for languages -->
+                <li>T's Tea Blog Website || Django, HTML, CSS || In Progress</li>
+                <li>Pauline Major Lifestyle Blog Website || Wordpress, CSS, HTML</li>
+                <a href="#"><i class="fas fa-arrow-down"></i></a>
+            </ul>
+        </div>
+        <div id="past-jobs">
+            <h2>Experience</h2>
+            <h3><b>New College Residence Council</b> -- Director of Communications, May 2019 - April 2020</h3>
+            <h3><b>Elan Data Makers</b> -- Data Entry Operator, Summer 2019</h3>
+            <h3><b>New College Residence Council</b> -- Junior House Representative, September 2018 - April 2019</h3>
+            <a href="#"><i class="fas fa-arrow-down"></i></a>
         </div>
     </body>
 </html>
