--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <div id=experience>
             <h2>Where I've worked in the past...<span class="blinker">:</span></h2>
-            <div class=exp-itm>
+            <div class="exp-itm">
                 <h3>Nowhere... yet</h3>
                 <p>Help change this<span class=blinker>:</span></p>
                 <a href="./resume-terrence_amponsah.pdf" download>Resume</a>
